--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^0.4.0",
-    "child-process-promise": "^2.2.0",
-    "mkdirp": "^0.5.1",
-    "mkdirp-promise": "^5.0.1"
+    "child-process-promise": "^2.2.0"
   }
 }
